# FILE_COPY

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  findextension.c  main.c  newtrial.c  openadir.c
cross_build/: CMakeLists.txt
directoryOperation/: directoryOperation.c  directoryOperation.h
fileCopy/: fileCopy.c  fileCopy.h
fileOperation/: fileOperation.c  fileOperation.h
listFiles/: listFiles.c  listFiles.h
native_build/: CMakeLists.txt
